--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,12 @@
 }
 
 /* line 47, ../scss/main.scss */
+body {
+  font-family: Helvetica, sans-serif;
+  font-size: 13pt;
+}
+
+/* line 52, ../scss/main.scss */
 input[type=text] {
   width: 100%;
   border: 1px solid #e0dcda;
@@ -45,25 +51,25 @@ input[type=text] {
   box-sizing: border-box;
   transition: .3s;
 }
-/* line 55, ../scss/main.scss */
+/* line 60, ../scss/main.scss */
 input[type=text]:focus {
   border-color: #46b29d;
   box-shadow: 0 0 4px 0 #46b29d;
 }
 
-/* line 60, ../scss/main.scss */
+/* line 65, ../scss/main.scss */
 .inputWithIcon {
   position: relative;
 }
-/* line 62, ../scss/main.scss */
+/* line 67, ../scss/main.scss */
 .inputWithIcon input[type=text] {
   padding-left: 40px;
 }
-/* line 64, ../scss/main.scss */
+/* line 69, ../scss/main.scss */
 .inputWithIcon input[type=text]:focus + i {
   color: #46b29d;
 }
-/* line 68, ../scss/main.scss */
+/* line 73, ../scss/main.scss */
 .inputWithIcon i {
   position: absolute;
   left: 0;
@@ -72,7 +78,7 @@ input[type=text]:focus {
   transition: .3s;
 }
 
-/* line 77, ../scss/main.scss */
+/* line 82, ../scss/main.scss */
 input[type=date] {
   width: 100%;
   border: 1px solid #e0dcda;
@@ -82,25 +88,25 @@ input[type=date] {
   box-sizing: border-box;
   transition: .3s;
 }
-/* line 85, ../scss/main.scss */
+/* line 90, ../scss/main.scss */
 input[type=date]:focus {
   border-color: #46b29d;
   box-shadow: 0 0 4px 0 #46b29d;
 }
 
-/* line 90, ../scss/main.scss */
+/* line 95, ../scss/main.scss */
 .inputWithIcon {
   position: relative;
 }
-/* line 92, ../scss/main.scss */
+/* line 97, ../scss/main.scss */
 .inputWithIcon input[type=date] {
   padding-left: 40px;
 }
-/* line 94, ../scss/main.scss */
+/* line 99, ../scss/main.scss */
 .inputWithIcon input[type=date]:focus + i {
   color: #46b29d;
 }
-/* line 98, ../scss/main.scss */
+/* line 103, ../scss/main.scss */
 .inputWithIcon i {
   position: absolute;
   left: 0;
@@ -109,7 +115,7 @@ input[type=date]:focus {
   transition: .3s;
 }
 
-/* line 107, ../scss/main.scss */
+/* line 112, ../scss/main.scss */
 input[type=password] {
   width: 100%;
   border: 1px solid #e0dcda;
@@ -119,25 +125,25 @@ input[type=password] {
   box-sizing: border-box;
   transition: .3s;
 }
-/* line 115, ../scss/main.scss */
+/* line 120, ../scss/main.scss */
 input[type=password]:focus {
   border-color: #46b29d;
   box-shadow: 0 0 4px 0 #46b29d;
 }
 
-/* line 120, ../scss/main.scss */
+/* line 125, ../scss/main.scss */
 .inputWithIcon {
   position: relative;
 }
-/* line 122, ../scss/main.scss */
+/* line 127, ../scss/main.scss */
 .inputWithIcon input[type=password] {
   padding-left: 40px;
 }
-/* line 124, ../scss/main.scss */
+/* line 129, ../scss/main.scss */
 .inputWithIcon input[type=password]:focus + i {
   color: #46b29d;
 }
-/* line 128, ../scss/main.scss */
+/* line 133, ../scss/main.scss */
 .inputWithIcon i {
   position: absolute;
   left: 0;
@@ -147,7 +153,7 @@ input[type=password]:focus {
   transition: .3s;
 }
 
-/* line 138, ../scss/main.scss */
+/* line 143, ../scss/main.scss */
 input[type=email] {
   width: 100%;
   border: 1px solid #e0dcda;
@@ -157,25 +163,25 @@ input[type=email] {
   box-sizing: border-box;
   transition: .3s;
 }
-/* line 146, ../scss/main.scss */
+/* line 151, ../scss/main.scss */
 input[type=email]:focus {
   border-color: #46b29d;
   box-shadow: 0 0 4px 0 #46b29d;
 }
 
-/* line 151, ../scss/main.scss */
+/* line 156, ../scss/main.scss */
 .inputWithIcon {
   position: relative;
 }
-/* line 153, ../scss/main.scss */
+/* line 158, ../scss/main.scss */
 .inputWithIcon input[type=email] {
   padding-left: 40px;
 }
-/* line 155, ../scss/main.scss */
+/* line 160, ../scss/main.scss */
 .inputWithIcon input[type=email]:focus + i {
   color: #46b29d;
 }
-/* line 159, ../scss/main.scss */
+/* line 164, ../scss/main.scss */
 .inputWithIcon i {
   position: absolute;
   left: 0;
@@ -185,16 +191,20 @@ input[type=email]:focus {
   transition: .3s;
 }
 
-/* line 169, ../scss/main.scss */
+/* line 174, ../scss/main.scss */
 h1 {
   font-family: 'BebasNeue', sans-serif;
   font-size: 25pt;
   color: #000;
-  margin: 20px 0 20px -13px;
   padding: 0;
 }
 
-/* line 177, ../scss/main.scss */
+/* line 181, ../scss/main.scss */
+#h1-modified {
+  margin: 20px 0 20px -13px;
+}
+
+/* line 185, ../scss/main.scss */
 h2 {
   font-family: Helvetica, sans-serif;
   font-size: 12pt;
@@ -203,64 +213,64 @@ h2 {
   padding: 0;
 }
 
-/* line 185, ../scss/main.scss */
+/* line 193, ../scss/main.scss */
 #login-text {
   font-family: Helvetica, sans-serif;
   font-size: 12pt;
   margin: 0 0 0 -13px;
 }
 
-/* line 191, ../scss/main.scss */
+/* line 199, ../scss/main.scss */
 hr {
   margin: 0 0 12px 0;
 }
 
-/* line 195, ../scss/main.scss */
+/* line 203, ../scss/main.scss */
 .navbar {
   margin: 0 auto;
   background-color: #e0dcda;
   font-family: 'BebasNeue', sans-serif;
   border: none;
 }
-/* line 201, ../scss/main.scss */
+/* line 209, ../scss/main.scss */
 .navbar .navbar-nav {
   width: 100%;
   text-align: center;
 }
-/* line 204, ../scss/main.scss */
+/* line 212, ../scss/main.scss */
 .navbar .navbar-nav > li {
   float: none;
   display: inline-block;
   border-right: 1px solid #adadad;
 }
-/* line 209, ../scss/main.scss */
+/* line 217, ../scss/main.scss */
 .navbar .navbar-nav > li:last-child {
   border-right: none;
 }
-/* line 212, ../scss/main.scss */
+/* line 220, ../scss/main.scss */
 .navbar .navbar-nav > li > a {
   color: #000;
 }
-/* line 216, ../scss/main.scss */
+/* line 224, ../scss/main.scss */
 .navbar .navbar-nav .navbar-right {
   float: right;
 }
-/* line 221, ../scss/main.scss */
+/* line 229, ../scss/main.scss */
 .navbar .navbar-default {
   width: 100%;
   text-align: center;
 }
-/* line 224, ../scss/main.scss */
+/* line 232, ../scss/main.scss */
 .navbar .navbar-default > li {
   float: none;
   display: inline-block;
 }
-/* line 229, ../scss/main.scss */
+/* line 237, ../scss/main.scss */
 .navbar .navbar-default > .active {
   background-color: #f2f2f2;
 }
 
-/* line 235, ../scss/main.scss */
+/* line 243, ../scss/main.scss */
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
@@ -268,45 +278,45 @@ hr {
   color: #e37b40;
 }
 
-/* line 242, ../scss/main.scss */
+/* line 250, ../scss/main.scss */
 header {
   background-color: #000;
   font-family: 'BebasNeue', sans-serif;
 }
-/* line 246, ../scss/main.scss */
+/* line 254, ../scss/main.scss */
 header .inner {
   margin: 0 auto;
   width: 100%;
   display: block;
 }
-/* line 253, ../scss/main.scss */
+/* line 261, ../scss/main.scss */
 header .btn {
   background-color: #000;
   border: none;
   font-size: 11.5pt;
   float: right;
 }
-/* line 258, ../scss/main.scss */
+/* line 266, ../scss/main.scss */
 header .btn:hover {
   background-color: #000;
 }
 
-/* line 264, ../scss/main.scss */
+/* line 272, ../scss/main.scss */
 .toast-success {
   background-color: #dff0d8;
 }
 
-/* line 268, ../scss/main.scss */
+/* line 276, ../scss/main.scss */
 .toast-error {
   background-color: #f2dede;
 }
 
-/* line 272, ../scss/main.scss */
+/* line 280, ../scss/main.scss */
 .full {
   width: 100%;
 }
 
-/* line 276, ../scss/main.scss */
+/* line 284, ../scss/main.scss */
 .gap {
   height: 30px;
   width: 100%;
@@ -314,7 +324,7 @@ header .btn:hover {
   display: block;
 }
 
-/* line 283, ../scss/main.scss */
+/* line 291, ../scss/main.scss */
 footer {
   background: #000;
   font-family: 'BebasNeue', sans-serif;
@@ -325,23 +335,23 @@ footer {
   position: absolute;
   text-align: center;
 }
-/* line 293, ../scss/main.scss */
+/* line 301, ../scss/main.scss */
 footer div.navbar-nav {
   margin-top: 40px;
   float: none;
   text-align: center;
 }
-/* line 299, ../scss/main.scss */
+/* line 307, ../scss/main.scss */
 footer ul {
   list-style-type: none;
   padding: auto;
 }
-/* line 303, ../scss/main.scss */
+/* line 311, ../scss/main.scss */
 footer ul #social {
   display: flex;
   align-items: center;
 }
-/* line 309, ../scss/main.scss */
+/* line 317, ../scss/main.scss */
 footer li {
   float: left;
   padding-left: 100px;
@@ -350,7 +360,7 @@ footer li {
   height: auto;
   display: inline-block;
 }
-/* line 316, ../scss/main.scss */
+/* line 324, ../scss/main.scss */
 footer li a {
   color: #fff;
   font-family: 'BebasNeue', sans-serif;
@@ -359,13 +369,13 @@ footer li a {
   text-align: center;
   overflow: hidden;
 }
-/* line 323, ../scss/main.scss */
+/* line 331, ../scss/main.scss */
 footer li a:hover {
   text-decoration: none;
   color: #fff;
 }
 
-/* line 331, ../scss/main.scss */
+/* line 339, ../scss/main.scss */
 .supportLi h4 {
   font-size: 20px;
   font-weight: lighter;
@@ -374,7 +384,7 @@ footer li a:hover {
   padding-bottom: 0;
 }
 
-/* line 339, ../scss/main.scss */
+/* line 347, ../scss/main.scss */
 .newsletter-box input#appendedInputButton {
   background: #FFFFFF;
   display: inline-block;
@@ -384,7 +394,7 @@ footer li a:hover {
   width: 100%;
 }
 
-/* line 348, ../scss/main.scss */
+/* line 356, ../scss/main.scss */
 .newsletter-box .btn {
   border: medium none;
   -webkit-border-radius: 3px;
@@ -399,18 +409,18 @@ footer li a:hover {
   color: #fff;
 }
 
-/* line 362, ../scss/main.scss */
+/* line 370, ../scss/main.scss */
 .newsletter-box {
   overflow: hidden;
 }
 
-/* line 366, ../scss/main.scss */
+/* line 374, ../scss/main.scss */
 .bg-gray {
   background-image: -moz-linear-gradient(center bottom, #BBBBBB 0%, #F0F0F0 100%);
   box-shadow: 0 1px 0 #B4B3B3;
 }
 
-/* line 371, ../scss/main.scss */
+/* line 379, ../scss/main.scss */
 .social li {
   background: none repeat scroll 0 0 #B5B5B5;
   border: 2px solid #B5B5B5;
@@ -433,7 +443,7 @@ footer li a:hover {
   -o-transition: all 0.5s ease 0s;
 }
 
-/* line 393, ../scss/main.scss */
+/* line 401, ../scss/main.scss */
 .social li:hover {
   transform: scale(1.15) rotate(360deg);
   -webkit-transform: scale(1.1) rotate(360deg);
@@ -442,25 +452,25 @@ footer li a:hover {
   -o-transform: scale(1.1) rotate(360deg);
 }
 
-/* line 401, ../scss/main.scss */
+/* line 409, ../scss/main.scss */
 .social li a {
   color: #EDEFF1;
 }
 
-/* line 405, ../scss/main.scss */
+/* line 413, ../scss/main.scss */
 .social li:hover {
   border: 2px solid #2c3e50;
   background: #2c3e50;
 }
 
-/* line 410, ../scss/main.scss */
+/* line 418, ../scss/main.scss */
 .social li a i {
   font-size: 16px;
   margin: 0 0 0 5px;
   color: #EDEFF1 !important;
 }
 
-/* line 416, ../scss/main.scss */
+/* line 424, ../scss/main.scss */
 .footer-bottom {
   background: #E3E3E3;
   border-top: 1px solid #DDDDDD;
@@ -468,17 +478,17 @@ footer li a:hover {
   padding-bottom: 10px;
 }
 
-/* line 423, ../scss/main.scss */
+/* line 431, ../scss/main.scss */
 .footer-bottom p.pull-left {
   padding-top: 6px;
 }
 
-/* line 427, ../scss/main.scss */
+/* line 435, ../scss/main.scss */
 .payments {
   font-size: 1.5em;
 }
 
-/* line 431, ../scss/main.scss */
+/* line 439, ../scss/main.scss */
 .wrapper.login {
   width: 350px;
 }
