--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,6 +44,11 @@ $main-color: #f2f2f2;
   font-size: 14pt;
 }
 
+body {
+  font-family: Helvetica, sans-serif;
+  font-size: 13pt;
+}
+
 input[type=text]{
   width:100%;
   border:1px solid $nav-color;
@@ -170,8 +175,11 @@ h1 {
   font-family: 'BebasNeue', sans-serif;
   font-size: 25pt;
   color: $black;
-  margin: 20px 0 20px -13px;
   padding: 0;
+}
+
+#h1-modified {
+  margin: 20px 0 20px -13px;
 }
 
 h2 {
